fix(frontend): fix alignment on publication emoji
ref: #4929 #4956

--- a/frontend/src/component/FeedItem/FeedItemFooter.styl
+++ b/frontend/src/component/FeedItem/FeedItemFooter.styl
@@ -14,7 +14,8 @@
     & .buttonComments
        margin 0px standardSpacing standardSpacing 0px
     & .EmojiReactionButton__buttonpicker
-      padding standardSpacing standardSpacing standardSpacing 0
+      padding standardSpacing textSpacing standardSpacing 0
+      margin-bottom standardSpacing
   &__comments
     margin-inline-start standardSpacing
 
